@@ -310,6 +310,8 @@ t/data/api_dbic_fixtures/npg/RunStatus.yml
 t/data/api_dbic_fixtures/npg/Run.yml
 t/data/autoqc/bam_flagstats/16960_1_0.tar.gz
 t/data/autoqc/bam_flagstats/17448_1_9.tar.gz
+t/data/autoqc/bam_flagstats/24135_1#1.bam_flagstats.json
+t/data/autoqc/bam_flagstats/24135_1#1.flagstat
 t/data/autoqc/bam_flagstats/4783_5_bam_flagstats.json
 t/data/autoqc/bam_flagstats/4783_5_metrics_optical.txt
 t/data/autoqc/bam_flagstats/4783_5.flagstat
