@@ -1,0 +1,1 @@
+{"histogram":{},"info":{},"id_run":24135,"mate_mapped_defferent_chr":6,"mate_mapped_defferent_chr_5":6,"num_total_reads":66302,"paired_mapped_reads":31230,"position":1,"proper_mapped_pair":60192,"tag_index":1,"unmapped_reads":3776,"unpaired_mapped_reads":66}
